--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 <body>
     
     <main id="container">
+        <header>
+            <h1>FIZZ BUZZ</h1>
+            <img src="images/image2.jpg" width="100%" alt="Header Image"/>
+        </header>
+    
+        <nav class="stroke">
+            <ul>
+            <li><button type="submit" id="generate">Generate Default Div's</button><br></li>
+            <li><button type="submit" id="clear">Clear Div's</button><br></li>
+            <li><button type="submit" id="generate2">Generate custom Div's</button><br></li>
+            </ul>
+        </nav>
+
         <div id="valueBox">
             <h3>Start value :</h3><input id="startValue" type="number" value="1">
             <h3>End value :</h3><input id="endValue" type="number" value="100">
@@ -37,11 +50,9 @@
                         </div>
                 </div>
         </div>
-            </div>
+        </div>
         <div id="menuBox">
-            <button type="submit" id="generate">Generate Default Div's</button><br>
-            <button type="submit" id="clear">Clear Div's</button><br>
-            <button type="submit" id="generate2">Generate custom Div's</button><br>
+
         </div>
         <div id ="elements"></div>
     </main>
