--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     
 </head>
 <body>
-
+ 
 
     <main id="container">
         <header>
-            <h1>FIZZzz... BUZZzz...</h1>
-            <img src="images/image2.jpg" width="100%" alt="Header Image"/>
+            <div><h1>FIZZzz... BUZZzz...</h1></div>
+            <div><img src="images/image2.jpg" width="100%" alt="Header Image"/>
+                  </div>
         </header>
 
         <div id="menuBox">
@@ -27,6 +28,7 @@
                 <li><button type="submit" id="generate">DEFAULT</button><br></li>
                 <li><button type="submit" id="clear">CLEAR</button><br></li>
                 <li><button type="submit" id="generate2">CUSTOM</button><br></li>
+                <li><button type="#">LET'S PLAY A GAME</button><br></li>
                 </ul>
 
         </div>
