--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
     <main id="container">
         <header>
-            <div><h1>FIZZzz... BUZZzz...</h1></div>
+            <div><h1>FIZZzz... BUZZzz...</h1>
+                <a href="https://gundega-t.github.io/fizzbuzzgenerator.github.com/PLAY A GAME">PLAY A GAME</a>
+            </div>
             <div><img src="images/image2.jpg" width="100%" alt="Header Image"/>
                   </div>
         </header>
@@ -28,7 +30,6 @@
                 <li><button type="submit" id="generate">DEFAULT</button><br></li>
                 <li><button type="submit" id="clear">CLEAR</button><br></li>
                 <li><button type="submit" id="generate2">CUSTOM</button><br></li>
-                <li><button type="#">LET'S PLAY A GAME</button><br></li>
                 </ul>
 
         </div>
