--- a/PLAY.html
+++ b/PLAY.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script type="text/javascript" src="game.js" defer></script>
     <link rel="stylesheet" href="game.css">
-    <title>Game</title>
+    <title>FizzBuzzGame</title>
 
 </head>
 <body>
@@ -33,6 +33,7 @@
             <div class="precision">precision: <span></span></div>
             <div class="finalscore">final score: <span></span></div>
             <button id="restart">NEW GAME</button>
+            
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
