--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main id="container">
         <header>
             <div><h1>FIZZzz... BUZZzz...</h1>
-                <a href="https://gundega-t.github.io/fizzbuzzgenerator.github.com/PLAY A GAME">PLAY A GAME</a>
+
             </div>
             <div><img src="images/image2.jpg" width="100%" alt="Header Image"/>
                   </div>
@@ -30,6 +30,9 @@
                 <li><button type="submit" id="generate">DEFAULT</button><br></li>
                 <li><button type="submit" id="clear">CLEAR</button><br></li>
                 <li><button type="submit" id="generate2">CUSTOM</button><br></li>
+                <li><button id="restart">NEW GAME</button><br></li>
+                <li><a href="https://gundega-t.github.io/fizzbuzzgenerator.github.com">BACK</a></li>
+                <li><a href="https://gundega-t.github.io/fizzbuzzgenerator.github.com/PLAY">PLAY</a></li>
                 </ul>
 
         </div>
