--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
                 <li><button type="submit" id="generate">DEFAULT</button><br></li>
                 <li><button type="submit" id="clear">CLEAR</button><br></li>
                 <li><button type="submit" id="generate2">CUSTOM</button><br></li>
-                <li><button id="restart">NEW GAME</button><br></li>
-                <li><a href="https://gundega-t.github.io/fizzbuzzgenerator.github.com">BACK</a></li>
-                <li><a href="https://gundega-t.github.io/fizzbuzzgenerator.github.com/PLAY">PLAY</a></li>
+                <li><button id="menuBox"><a href="https://gundega-t.github.io/fizzbuzzgenerator.github.com/PLAY">PLAY A GAME</a></button></li>
+
                 </ul>
 
         </div>
