--- a/PLAY.html
+++ b/PLAY.html
@@ -45,9 +45,9 @@
             <div class="precision">precision: <span></span></div>
             <div class="finalscore">final score: <span></span></div>
             <button id="restart">NEW GAME</button>
-            <button id="restart"><a href="https://gundega-t.github.io/fizzbuzzgenerator.github.com">BACK TO HOMEPAGE</a></button>
+            <button id="back"><a href="https://gundega-t.github.io/fizzbuzzgenerator.github.com">BACK TO HOMEPAGE</a></button>
             
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script id="rendered-js">
+        <script id="rendered-js"></script>
