--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div><h1>FIZZzz... BUZZzz...</h1></div>
             <div id="menuBox">
                 <ul>
-                    <li><button type="submit"><a href="https://gundega-t.github.io/fizzbuzzgenerator.github.com/PLAY">PLAY A GAME</a></button><br></li>
+                    <li><button type="submit"><a href="https://gundega-t.github.io/groupwork3fizzbuzz.github.com//PLAY">PLAY A GAME</a></button><br></li>
                     </ul>
             </div>
             
